@@ -1,6 +1,10 @@
+NULL = 
+
 SUBDIRS = secmem gtksecentry src po etpo icons preferences
 
-EXTRA_DIST =                            \
-	krb5-auth-dialog.spec
+EXTRA_DIST = \
+	krb5-auth-dialog.spec \
+	MAINTAINERS           \
+	$(NULL)
 
 DISTCLEANFILES = intltool-extract intltool-merge intltool-update
