@@ -1,3 +1,7 @@
+Sun May  3 16:43:22 CEST 2009 Guido Günther <agx@sigxcpu.org>
+
+	* Makefile.am: ship MAINTAINERS
+
 Sun May  3 16:42:16 CEST 2009 Guido Günther <agx@sigxcpu.org>
 
 	* .gitignore: ignore more generated files 
